# clthing

./: .gitignore  CMakeLists.txt  README.md  shell.nix
src/: helloWorld.cl  main.cpp
